# nirifluidpaper

./: PKGBUILD  README.md  install.sh  meson.build
.github/workflows/: build.yml
src/: main.c
systemd/: nirifluidpaper.service
